[project]
name = "atm-project"
version = "1.0.0"
description = "LightGBM Model for ATM Project"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2024.11.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "scipy-stubs==1.16.3.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
