[project]
name = "atm-project"
version = "1.0.0"
description = "LightGBM Model for ATM Project"
requires-python = ">=3.14"
dependencies = [
    "fastparquet",
    "lightgbm",
    "matplotlib",
    "optuna",
    "pandas",
    "pandas-stubs",
    "scikit-learn",
    "scipy",
    "scipy-stubs",
    "seaborn",
    "tabulate",
]
